--- a/Report/Report.tex
+++ b/Report/Report.tex
@@ -29,6 +29,8 @@ The code that was used to perform the data analysis can be found in the Jupyter 
 
 \href{https://github.com/SummerKassem/BikeShareCS/blob/main/Code/bike_share_analysis.ipynb}{bike\_share\_analysis.ipynb}.
 
+\textcolor{red}{Add hyperlinks between method names and cell in notebook}
+
 
 \section*{Cleaning:}
 
@@ -88,7 +90,7 @@ The code that was used to perform the data analysis can be found in the Jupyter 
 	\begin{figure}[h]
 	%\centering
 	\hspace{0.5cm}
-	\includegraphics[width=7.2 in, height = 1 in]{imgDups1.png}
+	\includegraphics[width=7.2 in, height = 1.3 in]{imgDups1.png}
 	\caption{Entries from original\_data[``May"] that have the same \textit{started\_at}}
 	\label{fig10}
 	\end{figure}
@@ -129,20 +131,30 @@ Looking at the entries in Figure \ref{fig8}, we can see that these are cases whe
 	The method \textit{prepare\_data} adds two new columns: \textit{ride\_length}: the difference between the columns \textit{ended\_at} and \textit{started\_at} times, and \textit{day\_of\_week}: extracted from the date in \textit{started\_at}. 
 	
 \item \textit{mean\_max\_mode}:\\	
-	This method calculates for each month the mean and maximum ride length, as well as the mode of the day of the week; i.e. the day of the week that occurred the most. The method also performs these operations across the entire a year to give an overall view of the data. The results are shown in Figure \ref{fig9}. The mean ride length varies between 13 - 22 minutes across the months, whereas the maximum ride length is 68 days. 
+	This method groups the data first by month and then calculates the mean and maximum ride length, as well as the mode of the day of the week; i.e. the day of the week that occurred the most. The method also performs these operations across all the months to give an overall year view of the data. The results are shown in Figure \ref{fig9}. The mean ride length varies between 13 - 22 minutes across the months, whereas the maximum ride length is 68 days. 
 	
 	\begin{figure}[h]
 	\centering
-	\includegraphics[scale=0.7]{imgMeanMax1.png} %[width=4 in, height = 3.2 in]
+	\includegraphics[scale=0.7]{imgMeanMax1.png} 
 	\caption{The mean and max ride length, and mode of day of the week}
 	\label{fig9}
 	\end{figure}
 	
+	In order to understand how the data shown Figure \ref{fig9} differs between members and casual riders, a pivot table is used to show the mean and maximum value by rider type. The table is shown in Figure \ref{fig11} left. A quick look at the table shows that the casual riders have longer rides when compared to members. To see this more clearly the mean ride length is plotted by rider type in Figure \ref{fig11} right.
+	
+	
 	\begin{figure}[h]
 	\centering
-	%\includegraphics[width=4 in, height = 3.2 in]{imgMeanMax2.png}
-	\caption{The mean and max ride length, and mode of day of the week for members and casual riders separately}
-	\label{fig10}
+	\begin{subfigure}{.4\textwidth}
+	\hspace{-0.8 in}
+		\includegraphics[scale=0.5]{imgMeanMax2.png} 
+	\end{subfigure}
+	\begin{subfigure}{.4\textwidth}
+	\hspace{0.3 in}
+		\includegraphics[scale=0.5]{mean_cvsm1.png}
+	\end{subfigure}
+	\caption{Left: The mean and max ride length divided by rider type}
+	\label{fig11}
 	\end{figure}
 	
 \end{itemize}
