--- a/Report/Report.tex
+++ b/Report/Report.tex
@@ -23,11 +23,9 @@
 \date{}
 \maketitle
 
-This report provides the results and step-by-step explanation of the data analysis performed for a bike-sharing case study. The data belongs to a bike-sharing company that has two kinds of users: annual members and casual riders. The goal of the study was to identify how annual members and casual riders use the bikes differently in order to help the stake-holders decide whether or not to target converting casual riders into annual members in the next marketing campaign. The library Pandas from Python was used to perform the analysis using data collected from January-December 2023 and downloaded from \url{https://divvy-tripdata.s3.amazonaws.com/index.html}. \\
+This report provides the results and step-by-step explanation of the data analysis performed for a bike-sharing case study. The data belongs to a bike-sharing company that has two kinds of users: annual members and casual riders. The goal of the study was to identify how annual members and casual riders use the bikes differently in order to help the stake-holders decide whether or not to target converting casual riders into annual members in the next marketing campaign. The data on which the analysis was carried out is from January-December 2023 and was downloaded from \url{https://divvy-tripdata.s3.amazonaws.com/index.html}. \\
 
-The code that was used to perform the data analysis can be found in the Jupyter Notebook 
-
-\href{https://github.com/SummerKassem/BikeShareCS/blob/main/Code/bike_share_analysis.ipynb}{bike\_share\_analysis.ipynb}.
+The library Pandas from Python was used to perform the analysis, and Matplotlib was used to plot the results. The code can be found in the Jupyter Notebook \href{https://github.com/SummerKassem/BikeShareCS/blob/main/Code/bike_share_analysis.ipynb}{bike\_share\_analysis.ipynb}.
 
 \textcolor{red}{Add hyperlinks between method names and cell in notebook}
 
@@ -131,7 +129,7 @@ Looking at the entries in Figure \ref{fig8}, we can see that these are cases whe
 	The method \textit{prepare\_data} adds two new columns: \textit{ride\_length}: the difference between the columns \textit{ended\_at} and \textit{started\_at} times, and \textit{day\_of\_week}: extracted from the date in \textit{started\_at}. Then the columns \textit{started\_at} and \textit{ended\_at} can be dropped, since they are now redundant.
 	
 \item \textit{mean\_max\_mode}:\\	
-	This method groups the data first by month and then calculates the mean and maximum ride length, as well as the mode of the day of the week; i.e. the day of the week that occurred the most. The method also performs these operations across all the months to give an overall year view of the data. The results are shown in Figure \ref{fig9}. The mean ride length varies between 13 - 22 minutes across the months, whereas the maximum ride length is 68 days. 
+	This method groups the data first by month and then calculates the mean and maximum ride length, as well as the mode of the day of the week; i.e. the day of the week that occurred the most. The method then aggregates the mean, mode and max values across the entire year. The results are shown in Figure \ref{fig9}. The mean ride length varies between 13 - 22 minutes across the months, whereas the maximum ride length is 68 days. 
 	
 	\begin{figure}[h]
 	\centering
@@ -140,34 +138,61 @@ Looking at the entries in Figure \ref{fig8}, we can see that these are cases whe
 	\label{fig9}
 	\end{figure}
 	
-	In order to understand how the data shown Figure \ref{fig9} differs between members and casual riders, a pivot table is used to show the maximum and mean value per month by rider type. The table is shown in Figure \ref{fig11}. A quick look shows that the casual riders have longer mean and maximum ride lengths when compared to members. To see this more clearly the mean and maximum ride length are plotted in Figure \ref{fig12}. From the plots we can see that casual riders consistently have longer rides than members across the entire year. And from the maximum ride length plot we can see that members never have a ride that exceeds one day, whereas casual riders have ride lengths that can go up to 68 days. By making a box plot which shows the middle 50\% of the data inside the box, and then the median,  
-	
-	
+	In order to understand how the data shown Figure \ref{fig9} differs between members and casual riders, a pivot table is used to show the maximum and mean value per month by rider type. The table is shown in Figure \ref{fig11}. A quick look shows that the casual riders have longer mean and maximum ride lengths when compared to members. To see this more clearly the mean and maximum ride length are plotted in Figure \ref{fig12}.  
+		\pagebreak
+		
 	\begin{figure}[h]
 	\centering
-	\includegraphics[scale=0.62]{imgMeanMax2.png} 
+	\includegraphics[scale=0.6]{imgMeanMax2.png} 
 	\caption{Table of mean and max ride length divided by rider type}
 	\label{fig11}
 	\end{figure}
 	
+From the plot of the mean values we observe that casual riders consistently have longer rides, than members across the entire year. Furthermore, the mean ride length for casual riders varies across the year from approximately 20 minutes in the colder months to a peak of 35 minutes in August. In contrast, the mean ride length for members changes only from 10 to 13 minutes. When looking at the maximum ride length plot we can see a similar pattern, where members never have a ride that exceeds one day, whereas casual riders have maximum ride lengths that can go up from 1-68 days. However, it is important to note here that such longer rides, are outliers that occur quite rarely in the dataset. This can be seen when plotting the entire distribution of ride lengths in a box plot shown in Figure \ref{fig13}.  
+	
 	\begin{figure}[h]
+	\centering
 	\begin{subfigure}{.45\textwidth}
-		\includegraphics[scale=0.5]{mean_cvsm1.pdf} 
+		\includegraphics[scale=0.48]{mean_cvsm_month.pdf} 
 	\end{subfigure}
 	\begin{subfigure}{.4\textwidth}
-		\includegraphics[scale=0.5]{max_cvsm1.pdf}
+		\includegraphics[scale=0.48]{max_cvsm.pdf}
 	\end{subfigure}
-	\caption{Plots of mean and max ride length divided by rider type}
+	\caption{Plots of mean and max ride length divided by rider type grouped by month}
 	\label{fig12}
 	\end{figure}
 	
+A box plot typically shows the middle 50\% of the distribution inside a box, then the lower and upper 25\% are shown by the whiskers, and finally circles represent outliers. We can see that the entire distribution of ride lengths for casual rider is between 0-50 minutes, with outliers in the range from 1-70 days. As for members, the ride lengths vary between 0-30 minutes, with outliers in the range 1- 25 hours. Therefore, if we ignore the outliers, the difference between the ride lengths for casual riders and members can be seen side by side in Figure \ref{fig15}.
+	
 	\begin{figure}[h]
-	\hspace{-1in}
-	\includegraphics[scale=0.7]{boxplot_distribution.pdf} 
-	\caption{}
+	\hspace{-0.5in}
+	\includegraphics[scale=0.6]{boxplot_distribution.pdf} 
+	\caption{Box plots of the ride length distributions. Left: casual riders, Right: members}
 	\label{fig13}
 	\end{figure}
 	
+	\begin{figure}[h]
+	\centering
+	\includegraphics[scale=0.6]{boxplot_distribution2.pdf} 
+	\caption{Box plot comparison of the ride length distributions casual and member riders}
+	\label{fig15}
+	\end{figure}
+
+In order to determine how significant this difference is we need to look at the number rides for the different rider types. 
+	
+So far we have been looking at the data by first grouping it using the month. In order to get a different perspective, we now look at the mean value of the ride length, however when the data is grouped using the day of the week. The result can be seen in Figure \ref{fig14}. Here we see the same higher average for the casual riders when compared to the members.  
+
+	\begin{figure}[h]
+	\centering
+	\includegraphics[scale=0.6]{mean_cvsm_dayofweek.pdf} 
+	\caption{Plot of mean ride length divided by rider type grouped by day of the week}
+	\label{fig14}
+	\end{figure}
+	
 \end{itemize}
+
+\section*{Conclusion:}
+
+In general, casual riders always have a longer rides. And the behaviour across seasons or days varies with a peak in August and the weekends. We can see that the entire distribution of ride lengths for casual rider is between 0-50 minutes, with outliers in the range from 1-70 days. As for members, the ride lengths vary between 0-30 minutes, with outliers in the range 1- 25 hours. Therefore, if we ignore the outliers, the casual riders have a higher ride length by 66\%.
 
 \end{document}
